# cocoindex-code

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/cocoindex_code/: _daemon_paths.py  chunking.py  cli.py  client.py  config.py  daemon.py  indexer.py  litellm_embedder.py  project.py  protocol.py  server.py  settings.py  shared.py
tests/: conftest.py  example_toml_chunker.py  test_bg_index.py  test_chunker_registry.py  test_cli_helpers.py  test_client.py  test_daemon.py  test_e2e.py  test_e2e_daemon.py  test_litellm_embedder.py  test_protocol.py  test_settings.py  test_shared.py
tests/e2e_docker/: conftest.py  test_docker_workspace.py
tests/e2e_docker_fixtures/sample_project/: README.md
tests/e2e_docker_fixtures/sample_project/lib/: utils.ts
tests/e2e_docker_fixtures/sample_project/src/: auth.py  handlers.py
